objects/SBQQ__PriceCondition__c.object
<CustomObject>
    <customHelpPage>SBQQ__PriceConditionHelp</customHelpPage>
    <description>Condition that fires the parent price rule.</description>
    <fields>
        <fullName>SBQQ__Field__c</fullName>
        <description>Field on Quote Line or Product Option object that is evaluated by this condition.</description>
        <inlineHelpText>Choose the field that should contain the value you enter in the Value field.</inlineHelpText>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterType__c</fullName>
        <description>Type of filtering used in this condition.</description>
        <inlineHelpText>Choose Variable to evaluate this condition against a Summary Variable; otherwise, choose Value.</inlineHelpText>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Summary variable that filters this condition.</description>
        <inlineHelpText>Select the Summary Variable you want this condition to use as a filter.</inlineHelpText>
        <label>Filter Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Filtered Price Conditions</relationshipLabel>
        <relationshipName>FilteredPriceConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Object__c</fullName>
        <description>Object against which the condition is evaluated.</description>
        <inlineHelpText>Object against which the condition is evaluated.</inlineHelpText>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Operator__c</fullName>
        <inlineHelpText>Select the operator to apply when comparing the Field with the Value.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Rule__c</fullName>
        <description>Parent rule</description>
        <inlineHelpText>Price rule running this condition.</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>SBQQ__PriceRule__c</referenceTo>
        <relationshipLabel>Price Conditions</relationshipLabel>
        <relationshipName>PriceConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__TestedVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Summary variable tested when evaluating this price condition.</description>
        <inlineHelpText>Summary variable tested by this price condition.</inlineHelpText>
        <label>Tested Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Price Conditions (Tested Variable)</relationshipLabel>
        <relationshipName>TestedPriceConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Value__c</fullName>
        <description>Value to evaluate against.</description>
        <inlineHelpText>Enter the value you want to match in the field you selected using the operator chosen.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Price Condition</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Condition #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__Tested_field_or_variable</fullName>
        <active>true</active>
        <description>Require either tested field or variable.</description>
        <errorConditionFormula>AND(ISBLANK(TEXT(SBQQ__Field__c)),ISBLANK(SBQQ__TestedVariable__c))</errorConditionFormula>
        <errorMessage>You must specify either field or tested variable.</errorMessage>
    </validationRules>
</CustomObject>